# finetuning-with-llama-factory

./: .gitignore  CHECKPOINT_EXPORT_DEMO_README.md  DEMO_README.md  DIRECT_FINETUNING_README.md  Dockerfile  FINAL_DEMO_README.md  FINAL_QUANTIZATION_FIX_SUMMARY.md  MODEL_USAGE_GUIDE.md  QUANTIZATION_FIX_SUMMARY.md  README.md  TENSORBOARD_GUIDE.md  TENSORBOARD_INTEGRATION_SUMMARY.md  check_api_file.py  checkpoint_merge_and_expert_evaluation_demo.py  checkpoint_merge_and_expert_evaluation_demo_fixed.py  comprehensive_integration_test.py  comprehensive_validation.py  comprehensive_validation_sync.py  convert_all_enhanced_data.py  data_enhancement_report.md  debug_api.py  demo_checkpoint_merge_and_export.py  demo_cli_usage.py  demo_comprehensive_finetuning.py  demo_config.yaml  demo_final.py  demo_simple_finetuning.py  direct_finetuning_with_existing_modules.py  direct_training.py  docker-compose.yml  final_data_quality_test.py  final_test_summary.py  fix_dependencies.py  fix_imports.py  fixed_quantization_final.py  integrated_export_and_test.py  json_serialization_fix_summary.md  practical_model_export_demo.py  pyproject.toml  pyproject_uv.toml  (+60 more)
configs/: config.yaml  cryptography_evaluation.yaml
docs/: crypto_term_enhancement_summary.md  deployment_guide.md  expert_evaluation_architecture.md  expert_evaluation_configuration.md  expert_evaluation_faq.md  operations_guide.md  thinking_generator_implementation.md  troubleshooting.md  troubleshooting_guide.md  user_manual.md
examples/: advanced_crypto_demo.py  api_usage_examples.py  chinese_capability_validation_demo.py  chinese_nlp_demo.py  crypto_term_demo.py  dataset_splitter_demo.py  distributed_training_demo.py  expert_evaluation_advanced_scenarios.py  expert_evaluation_basic_usage.py  expert_evaluation_demo.py  expert_evaluation_performance_benchmark.py  (+5 more)
(+148 files in other folders)
